Fixed overflow/rendering on mobile.

--- a/static/oxbar.css
+++ b/static/oxbar.css
@@ -15,7 +15,7 @@ body {
 
 .product {
     height: 150px;
-    width: 350px;
+    width: 330px;
     border: 2px solid black;
     float: left;
     margin: 7px 7px 7px 7px;
@@ -24,6 +24,7 @@ body {
 }
 
 .icon  {
+    padding-top: -10px;
     height: 20px;
     width: 20px;
 }
@@ -71,4 +72,15 @@ body {
     margin: 5px 5px 5px 5px;
     margin-bottom: 25px;
     padding-top: 12px;
+}
+
+.description {
+    height: 45px;
+    overflow: auto;
+
+}
+
+h3 {
+    margin-top: 5px;
+    height: 40px;
 }
